--- a/config/application.properties
+++ b/config/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=none
