--- a/config/application.properties
+++ b/config/application.properties
@@ -1,7 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=rootroot
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = rootroot
 
-spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=none
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
