--- a/config/application.properties
+++ b/config/application.properties
@@ -3,9 +3,13 @@ spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = rootroot
 
-spring.datasource.initialization-mode=always
+## Spring view resolver set up
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
-################### Hibernate Configuration ##########################
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
