--- a/config/application.properties
+++ b/config/application.properties
@@ -13,3 +13,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+#Log level configuration
+logging.level.root=info
+logging.level.com.safetynet.alerts=info
+logging.level.org.springframework.boot.autoconfigure.h2=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
