--- a/config/application.properties
+++ b/config/application.properties
@@ -1,18 +1,20 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = rootroot
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.user=root
+jdbc.pass=rootroot
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+hibernate.hbm2ddl.auto=create-drop
+
 
 ## Spring view resolver set up
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
 
 #Log level configuration
 logging.level.root=info
